# mL_operator

./: ImageCompare.h  README.md  check.cpp  simple_server.js
backend/: package.json  server.js
backend/controllers/: authController.js  imageController.js
backend/db/: connection.js
backend/middleware/: auth.js
backend/models/: Image.js  User.js
backend/routes/: authRoutes.js  imageRoutes.js
flutter_application_1/: .env  README.md  pubspec.yaml
flutter_application_1/android/: build.gradle  settings.gradle
flutter_application_1/android/app/: build.gradle  proguard-rules.pro
flutter_application_1/android/app/src/main/: AndroidManifest.xml
flutter_application_1/android/app/src/main/cpp/: CMakeLists.txt  ImageCompare.cpp  ImageCompare.h  image_compare.cpp  openn.hpp
flutter_application_1/android/app/src/main/kotlin/com/example/flutter_application_1/: ImageCompare.kt  MainActivity.kt
flutter_application_1/android/edge_detection/: build.gradle
flutter_application_1/lib/: main.dart
flutter_application_1/lib/providers/: auth_provider.dart
flutter_application_1/lib/screens/: admin_profile_screen.dart  admin_screen.dart  document_scanning_screen.dart  home_screen.dart  image_comparison_screen.dart  images_screen.dart  login_screen.dart  register_screen.dart
flutter_application_1/lib/services/: auth_service.dart  image_comparison_service.dart  storage_service.dart
flutter_application_1/macos/Flutter/: GeneratedPluginRegistrant.swift
